Bug #74912 - Fixed spacing issue

--- a/tourismaustralia-styleguide/assets/scss/site/modules/_type.scss
+++ b/tourismaustralia-styleguide/assets/scss/site/modules/_type.scss
@@ -209,7 +209,7 @@
   color: #8d896f;
 
   font-size: pxtoem(30px);
-  margin-bottom: .6em;
+  margin-bottom: 1em;
   @include breakpoint(sm){
     font-size: pxtoem(50px);
   }
